--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 first compile src/antlr3/TranslateWalker.g:
 
+Windows:
+    cd src/antlr3
+    java -cp ../../jar/antlr-3.2.jar org.antlr.Tool TranslateWalker.g
+
+Linux:
     cd src/antlr3
     java org.antlr.Tool TranslateWalker.g
 
@@ -7,4 +12,5 @@ and then use eclipse to compile all the java code
 
 use like this:
 
+Linux:
     java -cp "bin/:jar/antlr-3.2.jar:jar/apktool.jar" Carbon test/apk/Complete.apk
